--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scarica tracce da YouTube!</title>
+    <title>Downloader Youtube</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap">
     <style>
         body {
@@ -61,6 +61,7 @@
     <div class="container">
         <h1>Scarica Tracce da YouTube</h1>
         <h2>La musica scaricata da qui apparirà entro 15 minuti in Tripallefy (Plexamp)</h2>
+        <h3>Una volta premuto su scarica, aspetta, l'operazione sta andando in background</h3>
         <form action="/download" method="POST">
             <input type="text" name="url" placeholder="Incolla qui l'url della canzone" required>
             <input type="submit" value="Scarica!">
